# im-project

./: .gitignore
.github/workflows/: build.yml  rust.yml
grpc-project/java-grpc/: pom.xml
grpc-project/java-grpc/src/main/java/com/carlos/grpc/: GrpcServerRunner.java  JavaGrpcApplication.java
grpc-project/java-grpc/src/test/java/com/carlos/grpc/: JavaGrpcApplicationTests.java
grpc-project/proto/: user.proto
grpc-project/rust-grpc/: Cargo.toml  build.rs
grpc-project/rust-grpc/logs/: app-error.log.2025-07-01  app-info.log.2025-07-01  rust-grpc-project-error.log.2025-07-01  rust-grpc-project-info.log.2025-07-01
grpc-project/rust-grpc/src/: main.rs
grpc-project/rust-grpc/src/grpc/: mod.rs
grpc-project/rust-grpc/src/pb/: user.rs
grpc-project/rust-grpc/src/response_macro/: mod.rs
im-admin/: pom.xml
im-admin/src/main/java/com/carlos/admin/: DebugMapperScanner.java  ImAdminApplication.java  StartupCheck.java
im-admin/src/main/java/com/carlos/admin/config/: CorsConfig.java  MybatisConfig.java  TokenConfiguration.java
im-admin/src/main/java/com/carlos/admin/domain/: LitemallCarWhite.java  SysPermission.java  SysRole.java  SysRolePermission.java  SysUser.java  SysUserRole.java
im-admin/src/main/java/com/carlos/admin/generate/: Generate.java
im-admin/src/main/java/com/carlos/admin/kafka/: KafkaConsumerConfig.java  KafkaErrorHandler.java  KafkaProducerConfig.java  MyKafkaListener.java
im-admin/src/main/resources/: application.yml
im-admin/src/main/resources/mappers/: LitemallCarWhiteMapper.xml  SysPermissionMapper.xml  SysRoleMapper.xml  SysRolePermissionMapper.xml  SysUserMapper.xml  SysUserRoleMapper.xml
im-admin/src/test/java/com/carlos/admin/: ImAdminApplicationTests.java
im-flink/: pom.xml
im-flink/input/: word.txt
im-flink/src/main/java/com/carlos/imflink/: KafkaAdmin.java  KafkaConsume.java  KafkaProduct.java  KafkaSourceConsumer.java  StreamWordCount.java
im-server/: Cargo.toml  apiclient_key.pem  zig-build.shell
im-server/.cargo/: config.toml
im-server/creates/lib-core/: Cargo.toml
im-server/creates/lib-core/src/: lib.rs
im-server/creates/lib-core/src/context/: mod.rs
im-server/creates/lib-core/src/database/: mod.rs
im-server/creates/lib-core/src/email/: mod.rs
im-server/creates/lib-core/src/error/: mod.rs
im-server/creates/lib-core/src/jwt/: mod.rs
im-server/creates/lib-core/src/logger/: mod.rs
im-server/creates/lib-core/src/middleware/: verification_token.rs
im-server/creates/lib-core/src/nacos/: mod.rs
im-server/creates/lib-core/src/redis/: key_constants.rs  mod.rs
im-server/creates/lib-entity/: Cargo.toml
im-server/creates/lib-entity/src/mongo/: company.rs  server_config.rs
im-server/creates/lib-entity/src/mysql/: app_chat.rs  app_chat_user.rs  app_message_record.rs  app_user.rs  app_user_friend.rs  app_user_message.rs  app_user_timeline.rs  applet_group_buy.rs  applet_operation.rs  applet_operation_content.rs  applet_operation_team.rs  applet_operation_team_user.rs  applet_pay_centre_record.rs  applet_pay_record.rs  applet_settings.rs  applet_user.rs  applet_user_creation.rs  litemall_checkpoint.rs  litemall_device.rs  litemall_record.rs  mod.rs  prelude.rs
im-server/creates/lib-rpc/: Cargo.toml  build.rs
im-server/creates/lib-rpc/src/: lib.rs
im-server/creates/lib-rpc/src/client_pool/: message_client.rs  mod.rs  user_client.rs
im-server/creates/lib-rpc/src/pb/: message.rs  user.rs
im-server/creates/lib-utils/: Cargo.toml
im-server/creates/lib-utils/src/: lib.rs
im-server/creates/lib-utils/src/config/: auth_config.rs  chat_config.rs  mod.rs  user_config.rs
im-server/creates/lib-utils/src/date/: mod.rs
im-server/creates/lib-utils/src/result/: mod.rs  request_entity.rs
im-server/protos/message/: message.proto
im-server/service/chat-server/: Cargo.toml
im-server/service/chat-server/src/: lib.rs  main.rs
im-server/service/chat-server/src/proto_service/: mod.rs
im-server/service/chat-server/src/state/: mod.rs
im-server/service/net-server/: Cargo.toml
im-server/service/net-server/examples/: iot.rs  tcp_client.rs
im-server/service/net-server/src/: lib.rs  main.rs
im-server/service/pingora-project/: Cargo.toml
im-server/service/pingora-project/src/: main.rs
im-server/service/rust-cli/: Cargo.toml
im-server/service/rust-cli/examples/: image.rs  local_image.rs  patrol.rs
im-server/service/rust-cli/src/: lib.rs  main.rs  options.rs
im-server/service/rust-cli/src/chat/: chat_process.rs  mod.rs
im-server/service/rust-cli/src/csv/: csv_option.rs  csv_process.rs  mod.rs
im-server/service/rust-cli/src/image/: image_option.rs  image_process.rs  mod.rs
im-server/service/rust-cli/src/time/: mod.rs  time_option.rs  time_process.rs
im-server/service/server-auth/: Cargo.toml
im-server/service/server-auth/examples/: verification_user.rs
im-server/service/server-auth/src/: lib.rs  main.rs
im-server/service/server-auth/src/common/: auth.rs  car_termianl.rs  mod.rs
im-server/service/server-auth/src/state/: mod.rs
im-server/service/server-message/: Cargo.toml
im-server/service/server-message/src/: main.rs
im-server/service/server-user/: Cargo.toml
im-server/service/server-user/src/: lib.rs  main.rs
im-server/service/server-user/src/handler/: user.rs
im-server/service/server-user/src/state/: mod.rs
im-server/service/server-wechat/: Cargo.toml  build.rs
im-server/service/server-wechat/examples/: snowflake.rs  wechat_decode.rs
im-server/service/server-wechat/src/: lib.rs  main.rs
im-server/service/server-wechat/src/api/: mod.rs
im-server/service/server-wechat/src/api/applet/: entity.rs  mod.rs  service.rs
im-server/service/server-wechat/src/api/auth/: entity.rs  mod.rs  service.rs
im-server/service/server-wechat/src/api/common/: mod.rs  service.rs
im-server/service/server-wechat/src/core/: mod.rs
im-server/service/server-wechat/src/core/constants/: mod.rs
im-server/service/server-wechat/src/core/entity/: application_entity.rs  mod.rs  wechat_entity.rs
im-server/service/server-wechat/src/core/service/: mod.rs  wechat_api.rs
(+38 files in other folders)
