[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
tonic = { version = "0.12.1", features = ["zstd", "default", "router"] }
prost = "0.13.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }

[build-dependencies]
tonic-build = "0.12.1"
anyhow = "1.0.97"
