[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
derive_builder = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }
prost-build = { workspace = true }
