[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { workspace = true }
lib-core = { workspace = true }
lib-rpc = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mongodb = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
tower-http = { workspace = true }
sea-orm = { workspace = true }
dashmap = { workspace = true }
tonic-web = { workspace = true }
axum-extra = { workspace = true }