[package]
name = "net-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
