[package]
name = "net-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-rpc = { workspace = true }

tokio = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
bb8 = { workspace = true }