[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-entity = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
dialoguer = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
sea-orm = { workspace = true }
