[package]
name = "server-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { workspace = true }
lib-core = { workspace = true }
lib-entity = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sonyflake = { workspace = true }